--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </tr>
     <tr>
       <th>姓名</th>
-      <td>wangzhihong</td>
+      <td>李四</td>
     </tr>
     <tr>
       <th>岗位工资</th>
@@ -142,7 +142,7 @@
     </tr>
     <tr>
       <th>邮箱</th>
-      <td>zhihonwang@foxmail.com</td>
+      <td>wangzh@highly-whnet.com</td>
     </tr>
   </tbody>
 </table>
